fixed text moved right when text too much

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 body {
   font-family: 'Open Sans','helvetica',arial,sans-serif;
   font-weight: 300;
@@ -123,19 +129,15 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   margin: 0;
 }
+
 .education-experience__list img {
   float: left;
   width: 180px;
-  margin-right: 40px;
 }
-.education-experience__description {
+.content {
   overflow: hidden;
-}
-html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
+  padding: 0 0 50px 50px;
+  text-align: left;
 }
 .photos__list li {
   list-style: none;
